@@ -1,13 +1,11 @@
 package katas;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
-import model.MovieList;
 import util.DataUtil;
 
-import java.util.Date;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
+import java.util.stream.Collectors;
 
 /*
     Goal: Create a datastructure from the given data:
@@ -54,10 +52,17 @@ public class Kata10 {
     public static List<Map> execute() {
         List<Map> lists = DataUtil.getLists();
         List<Map> videos = DataUtil.getVideos();
-
-        return ImmutableList.of(ImmutableMap.of("name", "someName", "videos", ImmutableList.of(
-                ImmutableMap.of("id", 5, "title", "The Chamber"),
-                ImmutableMap.of("id", 3, "title", "Fracture")
-        )));
+        return lists.stream()
+                .map(genero ->
+                        Map.of("name", genero.get("name"),
+                                "videos", videos.stream()
+                                        .filter(video -> Objects.equals(genero.get("id"), video.get("listId")))
+                                        .map(
+                                                video -> Map.of("id", video.get("id"), "title", video.get("title"))
+                                        )
+                                        .collect(Collectors.toList())
+                        )
+                )
+                .collect(Collectors.toList());
     }
 }
