@@ -1,15 +1,13 @@
 package katas;
 
 import com.codepoetics.protonpack.StreamUtils;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 import model.Bookmark;
 import model.Movie;
-import model.MovieList;
 import util.DataUtil;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 /*
     Goal: Combine videos and bookmarks by index (StreamUtils.zip) (https://github.com/poetix/protonpack)
@@ -23,6 +21,8 @@ public class Kata8 {
 
         // StreamUtils.zip()
 
-        return ImmutableList.of(ImmutableMap.of("videoId", 5, "bookmarkId", 3));
+        return StreamUtils.zip(movies.stream(), bookMarks.stream(),
+                        (movie, bookMark) -> Map.of("videoId", movie.getId(), "bookmarkId", bookMark.getId()))
+                .collect(Collectors.toList());
     }
 }
